# configrdev

./: .gitignore  DESCRIPTION  config.status  configure  configure.ac  runrocker.sh
R/: check_home.r
src/: config.h
